# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  arg_parser.py  diff_generator.py  diff_node.py  format.py  json_formatter.py  parser.py  plain_formatter.py  stylish_formatter.py
gendiff/format/: __init__.py  plain_formatter.py  stylish_formatter.py
gendiff/parsers/: __init__.py  file_parser.py
gendiff/scripts/: gendiff.py
tests/: test_arg_parser.py  test_diff_generator.py
tests/test_data/: expected_nested.txt  expected_plain.txt
