[project]
authors = [
    {name = 'Kirill "SlowKing" Nagaqcev', email = "slowkinggg@vk.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
